Update Cave feature (cave-obr-server) in the website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1439529 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/cave.page
+++ b/src/main/webapp/index/subprojects/cave.page
@@ -27,7 +27,7 @@ To install and start Cave into a running Karaf instance, you have to install the
 
 {code}
 karaf@root> features:addurl mvn:org.apache.karaf.cave/apache-karaf-cave/3.0.0-SNAPSHOT/xml/features
-karaf@root> features:install cave-server
+karaf@root> features:install cave-obr-server
 {code}
 
 You're ready to use Cave server. Take a look on the user guide.
