Prepare the announce of Karaf EIK 0.9.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1447039 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,6 +1,6 @@
 ---
 title: Karaf 2.3.0
-page_version: 18
+page_version: 19
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2013-02-17}
 {include:news-2012-12-21}
 {include:news-2012-12-06}
 {include:news-2012-10-15}
