Add EIK manual in the navigation menu
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1447049 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -68,6 +68,8 @@ h3. [Subprojects]
 -- [Download|eik-download]
 -- [Source|eik-source]
 -- [Building|eik-building]
+-- User Guide ([HTML|http://karaf.apache.org/manual/eik/0.9.0/user-guide/index.html])
+-- Developer Guide ([HTML|http://karaf.apache.org/manual/eik/0.9.0/developers-guide/index.html])
 
 - [WebConsole]
 -- [Download|wc-download]
