--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -16,6 +16,7 @@ h3. Committers
 | [Łukasz Dywicki|http://blog.code-house.org] | | !/images/check.gif! | [Code-House|http://code-house.org] | 
 | [Freeman Fang|http://freemanfang.blogspot.com/] | ffang | !/images/check.gif! |  [FuseSource|http://fusesource.com/] |
 | Jarek Gawor | jgawor | !/images/check.gif! | [IBM|http://www.ibm.com] |
+| Christoph Gritschenberger| christophg | | |
 | [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | !/images/check.gif! |[Savoir Technologies|http://www.savoirtech.com/] |
 | David Jencks | djencks | !/images/check.gif! | [IBM|http://www.ibm.com] |
 | Alex Karasulu | akarasulu | !/images/check.gif! | |
