--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -13,9 +13,8 @@ h3. [Overview|Karaf Overview]
 
 h3. [Documentation]
 
-- Manual ([HTML|http://karaf.apache.org/manual/latest-2.3.x/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.pdf])
--- [User Guide | http://karaf.apache.org/manual/latest-2.3.x/users-guide/index.html]
--- [Developer Guide | http://karaf.apache.org/manual/latest-2.3.x/developers-guide/index.html]
+- [HTML|http://repo.maven.apache.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.html]
+- [PDF|http://repo.maven.apache.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.pdf]
 
 h3. Search
 
@@ -61,15 +60,12 @@ h3. [Subprojects]
 -- [Download|cellar-download]
 -- [Source|cellar-source]
 -- [Building|cellar-building]
--- User Guide ([HTML|http://karaf.apache.org/manual/cellar/latest-2.2.x/user-guide/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/cellar/manual/2.2.2/manual-2.2.2.pdf])
--- Architecture Guide ([HTML|http://karaf.apache.org/manual/cellar/latest-2.2.x/architecture-guide/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/cellar/manual/2.2.2/manual-2.2.2.pdf])
+-- Documentation ([HTML|http://repo.maven.apache.org/maven2/org/apache/karaf/cellar/manual/2.2.2/manual-2.2.2.html]|[PDF|http://repo.maven.apache.org/maven2/org/apache/karaf/cellar/manual/2.2.2/manual-2.2.2.pdf])
 
 - [EIK]
 -- [Download|eik-download]
 -- [Source|eik-source]
 -- [Building|eik-building]
--- User Guide ([HTML|http://karaf.apache.org/manual/eik/0.9.0/user-guide/index.html])
--- Developer Guide ([HTML|http://karaf.apache.org/manual/eik/0.9.0/developers-guide/index.html])
 
 - [WebConsole]
 -- [Download|wc-download]
