Update the website update procedure with the scm-publish goal
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1450783 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
+++ b/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
@@ -39,7 +39,7 @@ If you are a committer, just commit your changes.
 
 To deploy your modifications, you need to run the following command:
 {code}
-mvn scalate:deploy
+mvn clean install scm-publish:publish-scm
 {code}
 
 
