--- a/src/main/webapp/index/community/download/karaf-2.3.1-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.3.1-release.page
@@ -65,6 +65,7 @@ h3. Bug
  * [KARAF-2192|https://issues.apache.org/jira/browse/KARAF-2192] - Karaf obr:listURl and obr:list tests fail on faster boxes
  * [KARAF-2206|https://issues.apache.org/jira/browse/KARAF-2206] - The container fails to start correctly with IBM Java 6
  * [KARAF-2209|https://issues.apache.org/jira/browse/KARAF-2209] - Allow overriding system properties
+ * [KARAF-2213|https://issues.apache.org/jira/browse/KARAF-2213] - Missing org.apache.karaf.jaas.authz-2.3.1.jar from the system repo prevents minimal distro startup
 
 h3. Dependency upgrade
  * [KARAF-1801|https://issues.apache.org/jira/browse/KARAF-1801] - slf4j 1.7.0 (historical record)
