--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -8,10 +8,12 @@ h1. Documentation
 
 h2. Karaf 2.3.x manual
 
+* [Karaf 2.3.1 Manual|http://karaf.apache.org/manual/2.3.1/index.html]
 * [Karaf 2.3.0 Manual|http://karaf.apache.org/manual/2.3.0/index.html]
 
 h2. Karaf 2.2.x manual
 
+* [Karaf 2.2.10 Manual|http://karaf.apache.org/manual/2.2.10/index.html]
 * [Karaf 2.2.9 Manual|http://karaf.apache.org/manual/2.2.9/index.html]
 * [Karaf 2.2.8 Manual|http://karaf.apache.org/manual/2.2.8/index.html]
 * [Karaf 2.2.7 Manual|http://karaf.apache.org/manual/2.2.7/index.html]
