[KARAF-1934] Release Apache Karaf 2.3.1
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1452182 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -60,7 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
-{incluse:news-2013-03-03}
+{include:news-2013-03-03}
 {include:news-2013-02-17}
 {include:news-2012-12-21}
 {include:news-2012-12-06}
