--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -27,6 +27,7 @@ h2. Karaf 2.1.x manual
 * [Karaf Users' Guide in one page|https://cwiki.apache.org/KARAF/karaf-users-guide-in-one-page.html]
 
 h2. Karaf Dependency Tables
+* [Karaf 3.0.x dependencies.|documentation/karaf-dependencies/karaf-deps-3.0.x.html]
 * [Karaf 2.3.x dependencies.|documentation/karaf-dependencies/karaf-deps-2.3.x.html]
 * [Karaf 2.2.x dependencies.|documentation/karaf-dependencies/karaf-deps-2.2.x.html]
 * [Karaf 2.1.x dependencies.|documentation/karaf-dependencies/karaf-deps-2.1.x.html]
