Added a new topic addons, for "extras" around Karaf :)
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1456039 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -43,6 +43,10 @@ h2. Tutorials
 * [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
 * [Run a Google Web Toolkit 2 project on Apache Karaf/ServiceMix|http://cmoulliard.blogspot.com/2011/12/run-google-web-toolkit-2-project-on.html]
 
+h2. Addons
+
+* [Karaf features to plan and pom transformer|https://github.com/Tcharl/net.osgiliath.karaf.conftransform.utils]
+
 h2. Books
 
 * [OSGi Starter - The essential guide to modular development with OSGi for the serious application developer.|http://www.packtpub.com/open-services-gateway-initiative-starter/book]
