[KARAF-2218] Update documentation link to use the main site
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1456550 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -13,8 +13,9 @@ h3. [Overview|Karaf Overview]
 
 h3. [Documentation]
 
-- [HTML|http://repo.maven.apache.org/maven2/org/apache/karaf/manual/2.3.1/manual-2.3.1.html]
-- [PDF|http://repo.maven.apache.org/maven2/org/apache/karaf/manual/2.3.1/manual-2.3.1.pdf]
+- Manual ([HTML|http://karaf.apache.org/manual/latest-2.3.x/index.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.pdf])
+-- [User Guide | http://karaf.apache.org/manual/latest-2.3.x/users-guide/index.html]
+-- [Developer Guide | http://karaf.apache.org/manual/latest-2.3.x/developers-guide/index.html]
 
 h3. Search
 
