--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -15,6 +15,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
+*[Download Karaf 3.0.0.RC1|index/community/download.html#Karaf3.0.0.RC1]*
 *[Download Karaf 2.3.1|index/community/download.html#Karaf2.3.1]*
 [!/images/karaf-box.png|width=256!|index/community/download.html#Karaf2.3.1]
 {center}
@@ -60,6 +61,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2013-03-15}
 {include:news-2013-03-03}
 {include:news-2013-02-17}
 {include:news-2012-12-21}
@@ -72,4 +74,3 @@ h2. News
 {include:news-2012-04-27}
 {include:news-2012-04-08}
 {include:news-2012-01-30}
-{include:news-2012-01-20}
