--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -6,6 +6,10 @@ page_modifier: jbonofre
 --- pipeline:conf
 h1. Documentation
 
+h2. Karaf 3.0.x manual
+
+* [Karaf 3.0.0.RC1 Manual|http://karaf.apache.org/manual/3.0.0.RC1/index.html]
+
 h2. Karaf 2.3.x manual
 
 * [Karaf 2.3.1 Manual|http://karaf.apache.org/manual/2.3.1/index.html]
