[KARAF-2233] Release Apache Karaf 3.0.0.RC1
 Fix typo



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1456761 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -22,7 +22,7 @@ Technology Preview of Apache Karaf 3.0.x is [Karaf 3.0.0.RC1|karaf-3.0.0.RC1-rel
 The latest 2.3.x release is [Karaf 2.3.1 Release|download/karaf-2.3.1-release.html].
 
 Releases:
-* {#Karaf 3.0.0.RC1]
+* [#Karaf 3.0.0.RC1]
 * [#Karaf 2.3.1]
 
 {div}
