--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -18,7 +18,7 @@ h2. Latest Releases
 
 Grab these releases while they are hot!
 
-Technology Preview of Apache Karaf 3.0.x is [Karaf 3.0.0.RC1|karaf-3.0.0.RC1-release.html]
+Technology Preview of Apache Karaf 3.0.x is [Karaf 3.0.0.RC1|download/karaf-3.0.0.RC1-release.html]
 The latest 2.3.x release is [Karaf 2.3.1 Release|download/karaf-2.3.1-release.html].
 
 Releases:
