--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -8,22 +8,15 @@ h1. Documentation
 
 h2. Karaf 3.0.x manual
 
-* [Karaf 3.0.0.RC1 Manual|http://karaf.apache.org/manual/3.0.0.RC1/index.html]
+* [Karaf 3.0.0.RC1 Manual|http://karaf.apache.org/manual/latest/index.html]
 
 h2. Karaf 2.3.x manual
 
-* [Karaf 2.3.1 Manual|http://karaf.apache.org/manual/2.3.1/index.html]
-* [Karaf 2.3.0 Manual|http://karaf.apache.org/manual/2.3.0/index.html]
+* [Karaf 2.3.1 Manual|http://karaf.apache.org/manual/latest-2.3.x/index.html]
 
 h2. Karaf 2.2.x manual
 
-* [Karaf 2.2.10 Manual|http://karaf.apache.org/manual/2.2.10/index.html]
-* [Karaf 2.2.9 Manual|http://karaf.apache.org/manual/2.2.9/index.html]
-* [Karaf 2.2.8 Manual|http://karaf.apache.org/manual/2.2.8/index.html]
-* [Karaf 2.2.7 Manual|http://karaf.apache.org/manual/2.2.7/index.html]
-* [Karaf 2.2.6 Manual|http://karaf.apache.org/manual/2.2.6/index.html]
-* [Karaf 2.2.5 Manual|http://karaf.apache.org/manual/2.2.5/index.html]
-* [Karaf 2.2.4 Manual|http://karaf.apache.org/manual/2.2.4/index.html]
+* [Karaf 2.2.10 Manual|http://karaf.apache.org/manual/latest-2.2.x/index.html]
 
 h2. Karaf 2.1.x manual
 
