--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -11,6 +11,7 @@ h2. Articles on Apache Karaf
 * [xmppgtalk shell connector for Karaf and Gogo shell|http://spring-java-ee.blogspot.de/2012/02/xmppgtalk-shell-connector-for-apache.html]
 * [Create custom log4j appender for Karaf and Pax Logging|http://blog.nanthrax.net/2012/12/create-custom-log4j-appender-for-karaf-and-pax-logging/]
 * [How to enable HTTPs certificate client auth with Karaf|http://blog.nanthrax.net/2012/12/how-to-enable-https-certificate-client-auth-with-karaf/]
+* [Declarative Services with Karaf (SCR)|http://sully6768.blogspot.com/2012/09/scr-components-with-karaf.html]
 * [Apache Karaf 2011 Millesime|http://blog.nanthrax.net/2012/01/apache-karaf-2011-millesime/]
 * [Coming in Karaf 3.0: new KAR service, command, and management|http://blog.nanthrax.net/2011/12/coming-in-karaf-3-0-new-kar-service-command-management/]
 * [Overview on Apache Karaf, Pax Web, and Camel archetypes|http://blog.nanthrax.net/2011/12/overview-on-apache-karaf-pax-web-and-camel-archetypes/]
