--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -16,7 +16,7 @@ h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
 |Windows Distribution| [apache-karaf-2.3.0.zip|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.0.tar.gz|http://archive.apache.org/dyn/closer.cgi/karaf/2.3.0/apache-karaf-2.3.0.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.0-apache-karaf-2.3.0.tar.gz.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.0.tar.gz|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.0/apache-karaf-2.3.0.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.0-apache-karaf-2.3.0.tar.gz.md5]|
 
 h3. Source Distribution
 
@@ -28,6 +28,27 @@ h3. Manual
 ||Description||Download Link||
 |HTML Manual| [manual-2.3.0.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.html] |
 |PDF Manual| [manual-2.3.0.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.0/manual-2.3.0.pdf] |
+
+h2. Karaf 2.2.10
+
+[Release Notes|download/karaf-2.2.10-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.2.10.zip|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.10.tar.gz|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.10-apache-karaf-2.2.10.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.2.10-src.zip|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.10-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.10/apache-karaf-2.2.10-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-2.2.10.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.10/manual-2.2.10.html] |
+|PDF Manual| [manual-2.2.10.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.2.10/manual-2.2.10.pdf] |
 
 
 h2. Karaf 2.2.9
@@ -79,7 +100,7 @@ h3. Source Distribution
 
 ||Description||Download Link|| || || ||
 |Windows Source Distribution| [apache-karaf-2.2.7-src.zip|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.7-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.7-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.7/apache-karaf-2.2.7-src.tar.gz.md5]|
 
 h2. Karaf 2.2.6
 
@@ -167,7 +188,7 @@ h3. Binary Distribution
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.2.2-src.zip|http://archive.apache.org/dist/closer.cgi/karaf/2.2.2/apache-karaf-2.2.2-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.md5]|
+|Windows Source Distribution| [apache-karaf-2.2.2-src.zip|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.zip.md5]|
 |Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.2-src.tar.gz|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.2.2/apache-karaf-2.2.2-src.tar.gz.md5]|
 
 h2. Karaf 2.2.1
