--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -6,6 +6,8 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Articles on Apache Karaf
 
+* [Bind certain Web-Applications to specific HttpConnectors II|http://notizblog.nierbeck.de/2013/05/bind-certain-web-applications-to-specific-httpconnectors-ii/]
+* [Bind certain Web-Applications to specific HttpConnectors|http://notizblog.nierbeck.de/2013/01/bind-certain-web-applications-to-specific-httpconnectors/]
 * [Integration in the cloude with Apache Karaf, Cellar and Camel|http://notizblog.nierbeck.de/2013/04/integration-in-the-cloude-with-camel-karaf-and-cellar/]
 * [Load balancing with Apache Karaf Cellar, and mod_proxy_balancer|http://blog.nanthrax.net/2013/02/load-balancing-with-apache-karaf-cellar-and-mod_proxy_balancer/]
 * [Multiple HTTP connectors in Karaf|http://blog.nanthrax.net/2013/02/multiple-http-connectors-in-apache-karaf/]
