added some links
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1483718 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/commercial.page
+++ b/src/main/webapp/index/community/commercial.page
@@ -18,3 +18,6 @@ h3. Savoir Technologies, Inc
 
 [Savoir Technologies, Inc|http://www.savoirtech.com] provides enterprise consulting, training and support for Karaf and a host of other Apache service containers. Savoir can provide best practice mentoring for developing with Karaf, as well as architectural/design reviews, troubleshooting and SOA infrastructure implementations.
 
+h3. Inovex
+
+[Inovex|http://inovex.de] provides consulting and training for Apache Karaf and related technologies e.g. Apache Camel, Apache ActiveMQ and CXF for the DACH region.
