Announce Cellar 2.3.0 and 2.2.6 releases
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1486040 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/cellar/cellar-source.page
+++ b/src/main/webapp/index/subprojects/cellar/cellar-source.page
@@ -1,6 +1,6 @@
 ---
 title: Source
-page_version: 1
+page_version: 2
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
@@ -17,6 +17,12 @@ Or to browse the source tree directly:
 {panel}
 https://svn.apache.org/repos/asf/karaf/cellar/trunk/
 {panel}
+
+Currently, Cellar has several branches:
+
+* trunk: Cellar 3.0.x serie
+* cellar-2.3.x: Cellar 2.3.x serie
+* cellar-2.2.x: Cellar 2.2.x serie
 
 h2. Checking out from SVN
 
