Announce Karaf Cellar 2.3.1 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1498447 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,11 +1,12 @@
 ---
 title: News
-page_version: 9
+page_version: 10
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2013-07-01}
 {include:news-2013-05-23}
 {include:news-2013-03-15}
 {include:news-2013-03-03}
