--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -64,6 +64,7 @@ h2. Books
 
 h2. Apache Karaf Cellar
 
+* [Apache Karaf Cellar 2.3.0|http://blog.nanthrax.net/2013/05/apache-karaf-cellar-2-3-0-released/]
 * [Apache Karaf Cellar 2.2.4|http://blog.nanthrax.net/2012/05/apache-karaf-cellar-2-2-4/]
 * [Apache Karaf Cellar and central management|http://blog.nanthrax.net/2012/02/apache-karaf-cellar-and-central-management/]
 * [Communication between two remote Camel routes with Karaf Cellar|http://blog.nanthrax.net/2012/02/communication-between-two-remote-camel-routes-using-karaf-cellar/]
