[KARAF-2325] Release Apache Karaf 2.3.2
 Updating deps table.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1499436 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.3.x.page
+++ b/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.3.x.page
@@ -97,7 +97,7 @@ Note: Karaf 2.2.9 versions provided for upgrade path considerations.
 | pax.tinybundles | 1.3.0 | 1.3.0 | 1.3.0 | 1.3.0 |
 | plexus.utils | 2.1 | 2.1 | 2.1 | 2.1 |
 | portlet-api | n/a | 2.0 | 2.0 | 2.0 |
-| servicemix.specs | 2.0.0 | 2.1.0 | 2.2.0 | 2.3-SNAPSHOT UPDATE THIS |
+| servicemix.specs | 2.0.0 | 2.1.0 | 2.2.0 | 2.2.0 |
 | servlet.api | 2.5 | 2.5 | 2.5 | 2.5 |
 | slf4j | 1.6.6 | 1.6.6 | 1.7.2 | 1.7.2 |
 | spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 |
