[KARAF-2379] Fix git-svn commands in EIK subproject section
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1501663 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/eik/eik-source.page
+++ b/src/main/webapp/index/subprojects/eik/eik-source.page
@@ -1,6 +1,6 @@
 ---
 title: Source
-page_version: 1
+page_version: 2
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
@@ -38,14 +38,11 @@ https://svn.apache.org/repos/asf/karaf/eik/branches/
 
 h2. Using GIT-SVN
 
-A git-svn mirror is available.
-
 {code}
-PROJECT_NAME="karaf-eik"
-git clone git://git.apache.org/"$PROJECT_NAME"
-cd "$PROJECT_NAME"/.git; wget http://git.apache.org/authors.txt; cd ..
+git svn init --prefix=origin/ --trunk=trunk --branches=branches --tags=tags https://svn.apache.org/repos/asf/karaf/eik eik
+git svn fetch --log-window-size 20000
+cd eik/.git; wget http://git.apache.org/authors.txt; cd ..
 git config svn.authorsfile ".git/authors.txt"
-git svn init --prefix=origin/ --tags=tags --trunk=trunk --branches=branches https://svn.apache.org/repos/asf/"$PROJECT_NAME"
 git svn rebase
 {code}
 
