[KARAF-2472] Release Apache Karaf 2.3.3
 Update website.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1525081 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. News
 
+{include:news-2013-09-20}
 {include:news-2013-07-10}
 {include:news-2013-07-01}
 {include:news-2013-05-23}
