--- a/src/main/webapp/index/subprojects/cellar/cellar-download.page
+++ b/src/main/webapp/index/subprojects/cellar/cellar-download.page
@@ -18,9 +18,10 @@ h2. Latest Releases
 
 Grab these releases while they are hot!
 
-The latest release is [Karaf Cellar 2.3.1 Release|download/karaf-cellar-2.3.1-release.html].
+The latest release is [Karaf Cellar 2.3.2 Release|download/karaf-cellar-2.3.2-release.html].
 
 Releases:
+* [#Karaf Cellar 2.3.2]
 * [#Karaf Cellar 2.3.1]
 * [#Karaf Cellar 2.3.0]
 * [#Karaf Cellar 2.2.6]
@@ -38,6 +39,27 @@ h2. Getting the latest distributions
 {info:title=The URLs below use redirection}
 The above URLs use the Apache Mirror system to redirect you to a suitable mirror for your download. Some users have experienced issues with some versions of browsers (e.g. some Safari browsers). If the download doesn't seem to work for you from the above URL then try using [Mozilla Firefox|http://www.mozilla.com/en-US/firefox/]
 {info}
+
+h2. Karaf Cellar 2.3.2
+
+[Release Notes|download/karaf-cellar-2.3.2-release.html]
+
+h3. Direct Installation
+
+Simply install the Karaf Cellar feature into your running Karaf instance:
+
+{code}
+karaf@root> features:addurl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.2/xml/features
+karaf@root> features:install cellar
+{code}
+
+You're ready to use Karaf Cellar clustering.
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-cellar-2.3.2-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.3.2-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.3.2/apache-karaf-cellar-2.3.2-src.tar.gz.md5]|
 
 h2. Karaf Cellar 2.3.1
 
