--- a/src/main/webapp/index/subprojects/cellar/download/karaf-cellar-2.3.2-release.page
+++ b/src/main/webapp/index/subprojects/cellar/download/karaf-cellar-2.3.2-release.page
@@ -1,10 +1,17 @@
 ---
-title: Cellar
-page_version: 8
+title: Karaf Cellar 2.3.2 Release
+page_version: 1
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
-h2. Karaf Cellar
+h2. Download
+
+Download links can be found in the [Download|/index/subprojects/cellar/cellar-download.html] page.
+
+h2. Release Notes - Karaf Cellar - Version 2.3.2
+
+This release of Apache Karaf Cellar is the second one of the 2.3.x series branch.
+It's fully compatible with Karaf 2.3.x version, and contains major bug fixes.
 
 Cellar is a clustering solution for Apache Karaf powered by Hazelcast.
 
@@ -20,13 +27,18 @@ Here is a short list of provided features:
 - Distributed OSGi (optional): cellar-dosgi provides support of Distributed OSGi, allowing to call an OSGi service present on a remote node.
 - WebConsole (optional): cellar-webconsole provides Karaf WebConsole plugins, allowing you to monitore and administrate your cluster using your browser.
 
-h2. Quick Start
-
-To install and start Cellar into your running Karaf instance, you have to install the Cellar feature:
+To install Cellar into your running Karaf instance, just install the Cellar feature:
 
 {code}
-karaf@root> feature:add-url mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.2/xml/features
-karaf@root> feature:install cellar
+karaf@root> features:addurl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.2/xml/features
+karaf@root> features:install cellar
 {code}
 
-You're ready to use Cellar clustering. Take a look on the user guide.
+h3. Bug
+    * [KARAF-2432] - Unable to install cellar when features' OBR support is enabled
+    * [KARAF-2478] - Producer status is ignored when config is updated on cluster
+    * [KARAF-2480] - cellar-event throws a HazelcastSerializationException caused by a ClassNotFoundException when an event has an instance of a class stored in the event properties
+    * [KARAF-2514] - Config sync issue in some cases
+
+h3. Improvement
+    * [KARAF-2498] - Change log level to DEBUG for Cellar blacklist/whitelist message
