--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -63,6 +63,7 @@ h2. Addons
 
 h2. Books
 
+* [Learning Apache Karaf|http://www.packtpub.com/learning-apache-karaf/book]
 * [OSGi Starter - The essential guide to modular development with OSGi for the serious application developer.|http://www.packtpub.com/open-services-gateway-initiative-starter/book]
 * [OSGi in Action|http://www.manning.com/hall/]
 * [Java Application Architecture: Modularity Patterns with Examples Using OSGi|http://www.pearsonhighered.com/educator/product/Java-Application-Architecture-Modularity-Patterns-with-Examples-Using-OSGi/9780321247131.page]
